# RSC_sim

./: .gitignore  README.md  pyproject.toml  requirements.txt
RSC_sim/: RSC_functions.py  __init__.py  data_analysis.py  generate_M.py
RSC_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
